<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_dimen"
            android:background="@drawable/circular_layout_about"
            android:layout_marginTop="@dimen/dimen_15"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_txt"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ks_ins1"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_dimen"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_dimen"
            android:background="@drawable/circular_layout_about"
            android:layout_marginTop="@dimen/dimen_15"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_txt2"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ks_ins2"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_dimen"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_dimen"
            android:background="@drawable/circular_layout_about"
            android:layout_marginTop="@dimen/dimen_15"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_txt3"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ks_ins3"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_dimen"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_dimen"
            android:background="@drawable/circular_layout_about"
            android:layout_marginTop="@dimen/dimen_15"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_txt4"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ks_ins4"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_dimen"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_dimen"
            android:background="@drawable/circular_layout_about"
            android:layout_marginTop="@dimen/dimen_15"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_txt5"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_20"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ks_ins5"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_dimen"
                />

        </LinearLayout>



    </LinearLayout>
    </ScrollView>

</RelativeLayout>